--- a/templates/base.html
+++ b/templates/base.html
@@ -2,38 +2,73 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Pedro's Portfolio</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</head>
-<body>
+  <head>
+    <title>Pedro's Portfolio</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="d-flex align-items-center w-100">
+        <!-- Left-aligned image link -->
+        <a href="{% url 'index' %}" class="navbar-brand d-flex align-items-center"  style="margin-left: 10px;">
+          <img src="{% static 'img/icon.jpg' %}" 
+               alt="a picture of me" 
+               class="img-fluid rounded-circle" 
+               style="width: 40px; height: 40px;">
+        </a>
+        <ul class="navbar-nav bd-navbar-nav flex-row">
+          <li class="nav-item">
+            <a href="https://www.linkedin.com/in/pedro-criado-677p/" target="_blank" class="nav-link">
+              <i class="fab fa-linkedin fa-lg"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="https://github.com/pedrocriado" target="_blank" class="nav-link">
+              <i class="fab fa-github fa-lg"></i>
+            </a>
+          </li>
+        </ul>
+        <!-- Navbar toggle for small screens -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+    
+        <!-- Right-aligned navigation links -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-md-auto">
+            <li class="nav-item">
+              <a href="{% url 'index' %}" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'projects' %}" class="nav-link">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'contact' %}" class="nav-link">Contact Info</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    
 
+    <div class="container">
+      <div class="row">
 
-  <nav role="navigation">
-    <div>
-      <ul>
-        <li><a href="{% url 'index' %}">Home</a></li>
-      </ul>
+        {% block content %}
+        {% endblock %}
+        
+      </div>
     </div>
-  </nav>
 
-  <div class="container">
-    <div class="row">
+    <footer >
+    </footer>
 
-      {% block content %}
-      {% endblock %}
-      
-    </div>
-  </div>
-
-  <footer >
-  </footer>
-
-  {% block javascript %}
-  {% endblock %}
+    {% block javascript %}
+    {% endblock %}
 
   </body>
 </html>
