made some adjustments to the navigation bar to make it look better

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,18 +17,18 @@
         <a href="{% url 'index' %}" class="navbar-brand d-flex align-items-center"  style="margin-left: 10px;">
           <img src="{% static 'img/icon.jpg' %}" 
                alt="a picture of me" 
-               class="img-fluid rounded-circle" 
+               class="rounded-circle" 
                style="width: 40px; height: 40px;">
         </a>
         <ul class="navbar-nav bd-navbar-nav flex-row">
           <li class="nav-item">
             <a href="https://www.linkedin.com/in/pedro-criado-677p/" target="_blank" class="nav-link">
-              <i class="fab fa-linkedin fa-lg"></i>
+              <i class="fab fa-linkedin fa-2x"></i>
             </a>
           </li>
           <li class="nav-item">
             <a href="https://github.com/pedrocriado" target="_blank" class="nav-link">
-              <i class="fab fa-github fa-lg"></i>
+              <i class="fab fa-github fa-2x"></i>
             </a>
           </li>
         </ul>
@@ -38,7 +38,7 @@
         </button>
     
         <!-- Right-aligned navigation links -->
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav" style="margin-right: 10px;">
           <ul class="navbar-nav ml-md-auto">
             <li class="nav-item">
               <a href="{% url 'index' %}" class="nav-link">Home</a>
