--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,9 @@
             <li class="nav-item">
               <a href="{% url 'contact' %}" class="nav-link">Contact Info</a>
             </li>
+            <li class="nav-item">
+              <a href="{% url 'resume' %}" class="nav-link">Resume</a>
+            </li>
           </ul>
         </div>
       </div>
