--- a/templates/base.html
+++ b/templates/base.html
@@ -45,12 +45,12 @@
             </li>
             <li class="nav-item">
               <a href="{% url 'projects' %}" class="nav-link">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a href="{% url 'contact' %}" class="nav-link">Contact Info</a>
-            </li>
+            </li> 
             <li class="nav-item">
               <a href="{% url 'resume' %}" class="nav-link">Resume</a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'contact' %}" class="nav-link">Contact Me</a>
             </li>
           </ul>
         </div>
