--- a/templates/base.html
+++ b/templates/base.html
@@ -6,31 +6,36 @@
     <title>Pedro's Portfolio</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light">
-      <div class="d-flex align-items-center w-100">
+      <div class="container-fluid">
         <!-- Left-aligned image link -->
-        <a href="{% url 'index' %}" class="navbar-brand d-flex align-items-center"  style="margin-left: 10px;">
+        <a href="{% url 'index' %}" class="navbar-brand d-flex align-items-center img-logo"  style="margin-left: 10px;">
           <img src="{% static 'img/icon.jpg' %}" 
                alt="a picture of me" 
-               class="rounded-circle" 
-               style="width: 40px; height: 40px;">
+               class="img-logo rounded-circle">
         </a>
         <ul class="navbar-nav bd-navbar-nav flex-row">
           <li class="nav-item">
-            <a href="https://www.linkedin.com/in/pedro-criado-677p/" target="_blank" class="nav-link">
-              <i class="fab fa-linkedin fa-2x"></i>
+            <a href="https://github.com/pedrocriado" target="_blank" class="nav-link">
+              <img src="{% static 'img/github_logo.png' %}" 
+               alt="github"
+               class="img-logo">
             </a>
           </li>
           <li class="nav-item">
-            <a href="https://github.com/pedrocriado" target="_blank" class="nav-link">
-              <i class="fab fa-github fa-2x"></i>
+            <a href="https://www.linkedin.com/in/pedro-criado-677p/" target="_blank" class="nav-link">
+              <img src="{% static 'img/linkedin_logo.png' %}" 
+               alt="linkedin"
+               class="linkedin-logo">
             </a>
           </li>
+          
         </ul>
         <!-- Navbar toggle for small screens -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
