Made some changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,9 @@
 {% load static %}
 
 {% block content %}
-    <i>Home<i>
+    <div class="text-center mt-5">
+        <h1>Welcome to My Portfolio</h1>
+        <p>Hello! I'm Pedro Criado, a passionate developer</p>
+        <a href="{% url 'resume' %}" class="btn btn-primary mt-3">Download My Resume</a>
+    </div>
 {% endblock %}
